# ClauseRadar

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  cloudbuild.yaml  pyproject.toml
doc/: clause_radar_tech_spec.md
src/: config.py  contract_recommender.py  embedding_service.py  pinecone_client.py  ui.py  utils.py
